--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Document</title>
+    <title>StanislavQrg</title>
 </head>
 <body>
     
-
-
+Станислав Олегович Привет !
 
 
     <script src="js/main.js"></script>
