--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,21 @@
     <link rel="stylesheet" href="css/style.min.css">
     <title>StanislavQrg</title>
 </head>
+
 <body>
-    
-Станислав Олегович, Привет !
+
+    <section class="intro">
+        <div class="container">
+            <div class="intro__wrapper">
+                <div class="intro__info"></div>
+                <div class="intro__img"></div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="js/main.js"></script>
 
 </body>
+
 </html>
