--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <section class="intro">
         <div class="container">
             <div class="intro__wrapper">
-                <div class="intro__info"></div>
+                <div class="info">
+                    <div class="info__name">Станислав Кюрдзиди</div>
+                    <div class="info__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, magni.</div>
+
+                </div>
                 <div class="intro__img"></div>
             </div>
         </div>
