--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>StanislavQrg</title>
@@ -16,7 +18,8 @@
             <div class="intro__wrapper">
                 <div class="info">
                     <div class="info__name">Станислав Кюрдзиди</div>
-                    <div class="info__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, magni.</div>
+                    <div class="info__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, magni.
+                    </div>
 
                 </div>
                 <div class="intro__img"></div>
