--- a/index.html
+++ b/index.html
@@ -12,20 +12,32 @@
 </head>
 
 <body>
+<div class="page">
+    <header class="header">
+            <ul class="menu__list">
+                <li class="menu__item">Обо мне</li>
+                <li class="menu__item">Наука</li>
+                <li class="menu__item">Covid19</li>
+                <li class="menu__item">Контакты</li>
+            </ul>
+            <div class="social"></div>
+    </header>
 
     <section class="intro">
         <div class="container">
             <div class="intro__wrapper">
                 <div class="info">
-                    <div class="info__name">Станислав Кюрдзиди</div>
-                    <div class="info__descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, magni.
-                    </div>
+                    <h1 class="info__name">Станислав Кюрдзиди</h1>
+                    <h2 class="info__descr">Врач-гиниколог <br>
+                        Врач-исследователь в сфере детской гиникологии
+                    </р>
 
                 </div>
-                <div class="intro__img"></div>
+                <div class="intro__img"><img src="http://pngimg.com/uploads/doctor/doctor_PNG15963.png" alt=""></div>
             </div>
         </div>
     </section>
+</div>
 
 
     <script src="js/main.js"></script>
