--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="intro__wrapper">
                 <div class="info">
                     <h1 class="info__name">Станислав Кюрдзиди</h1>
-                    <h2 class="info__descr">Врач-гиниколог <br>
-                        Врач-исследователь в сфере детской гиникологии
+                    <h2 class="info__descr">Врач-гинеколог <br>
+                        Врач-исследователь в сфере детской гинекологии
                     </р>
 
                 </div>
